:hammer: :sparkles: allowing update not null columns
